fix problem with form visibility on contact and login pages

--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -182,6 +182,10 @@ form {
 }
 
 // contact page styles
+.jumbtron-text {
+  z-index: 10;
+}
+
 h1-form {
   color: black;
   z-index: 10;
